--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,192 @@
 */
 /* Common styles */
 @import url('./reset.css');
+
+:root {
+  --font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  font-family: var(--font-family);
+}
+
+.picker-container {
+  display: flex;
+  gap: 8px;
+
+  margin-top: 25px;
+  margin-bottom: 32px;
+}
+
+.picker-container > button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+
+  border: none;
+  outline: none;
+
+  background: #4e75ff;
+  color: #fff;
+
+  transition: background-color 150ms ease;
+}
+
+.picker-container > button:hover,
+.picker-container > button:active {
+  background: #6c8cff;
+}
+
+.picker-container > button:disabled {
+  color: #989898;
+  background: #cfcfcf;
+}
+
+#datetime-picker {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 272px;
+  height: 40px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+
+  padding-left: 16px;
+
+  transition: border 150ms ease, background-color 150ms ease;
+}
+
+#datetime-picker:hover {
+  border: 1px solid #000;
+}
+
+#datetime-picker:active {
+  border: 1px solid #4e75ff;
+}
+
+#datetime-picker:disabled {
+  background: #fafafa;
+  border: 1px solid #808080;
+}
+
+.timer {
+  display: flex;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.field .value {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.field .label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+}
+
+/* Snackbar */
+
+.form {
+  margin-top: 25px;
+}
+
+.form > label {
+  display: flex;
+  flex-direction: column;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.delay-input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
+
+.form > fieldset {
+  margin-top: 16px;
+
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+
+  width: 360px;
+  height: 78px;
+}
+
+fieldset {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 48px;
+}
+
+fieldset input {
+  border: 1px solid #757575;
+  border-radius: 14px;
+  width: 20px;
+  height: 20px;
+
+  margin-right: 14px;
+}
+
+fieldset label {
+  display: flex;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+}
+
+.form > button {
+  margin-top: 24px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+
+  background: #4e75ff;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  border: none;
+
+  transition: background-color 150ms ease;
+}
+
+.form > button:hover,
+.form > button:active {
+  background: #6c8cff;
+}
